[spalenque] - #14385 * fix scheule styles on small desktops

--- a/summit/css/install_mobile_app.css
+++ b/summit/css/install_mobile_app.css
@@ -15,6 +15,7 @@
     text-align:center;
     position: fixed;
     padding-bottom: 5%;
+    z-index: 1100;
 }
 
 .mobile-message p {
