--- a/themes/openstack/static/css/combined.css
+++ b/themes/openstack/static/css/combined.css
@@ -536,7 +536,7 @@ a.future-summit:hover:after {
     /*display: block !important;*/
   }
   .navbar-days .navbar-header {
-    width: 100%;
+    /*width: 100%;*/
   }
 }
 
